Fixed grid alignment

--- a/style.css
+++ b/style.css
@@ -2,14 +2,18 @@ body {
     background-color: gray;
 }
 .content{
-    background-color: aliceblue;
+    background-color: black;
     display: grid;
-    grid-template-columns: repeat(16, 20px);
-   
+    
+    max-width: 750px;
+    min-width: 750px;
+    max-height: 750px;
+    min-height: 750px;
 }
 .boxes{
     color:red;
-    background-color: blue;
+    background-color: white;
+    
     margin: 1px;
     
 }
